changed some variables

--- a/Session2/SupervisedLearning(TASK_1).ipynb
+++ b/Session2/SupervisedLearning(TASK_1).ipynb
@@ -1,31 +1,17 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## Generating Numpy arrays of data (Preprocessing)"
-      ],
       "metadata": {
         "id": "h3hRqI_vmn2u"
-      }
+      },
+      "source": [
+        "## Generating Numpy arrays of data (Preprocessing)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "1qyb4mEsMEas"
       },
@@ -47,45 +33,50 @@
         "labelMap = {\"Wine\": 0, \"Beer\": 1, \"Whiskey\": 2}\n",
         "inverseLabelMap = {labelMap[key]: key for key in labelMap}\n",
         "\n",
-        "labels = np.array([labelMap[row[-1]] for row in data])\n",
-        "features = np.array([row[:-1] for row in data], dtype=float)"
+        "y = np.array([labelMap[row[-1]] for row in data])\n",
+        "X = np.array([row[:-1] for row in data], dtype=float)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Creating the GINI impurity calculation function"
-      ],
       "metadata": {
         "id": "ElP6E4aWoyFP"
-      }
+      },
+      "source": [
+        "## Creating the GINI impurity calculation function"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "noOMUbHCmsSX"
+      },
+      "outputs": [],
       "source": [
         "def giniImpurity(labels):\n",
         "  counter = {key: 0 for key in list(set(labels))}\n",
         "  for i in labels:\n",
         "    counter[i] += 1\n",
         "  return 1 - sum(((count / len(labels)) ** 2) for count in counter.values())"
-      ],
-      "metadata": {
-        "id": "noOMUbHCmsSX"
-      },
-      "execution_count": 28,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Make the bestSplit function to identify the optimal feature and threshold to minimize weighted gini impurity of the left and right tree branches hence generated"
-      ],
       "metadata": {
         "id": "Q5bRttW3yzL3"
-      }
+      },
+      "source": [
+        "## Make the bestSplit function to identify the optimal feature and threshold to minimize weighted gini impurity of the left and right tree branches hence generated"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "qd8RIhWfy-zE"
+      },
+      "outputs": [],
       "source": [
         "def bestSplit(featureMatrix, labelArray):\n",
         "  minGINI = 1\n",
@@ -115,24 +106,24 @@
         "        bestFeature = feature\n",
         "\n",
         "  return bestFeature, bestThreshold"
-      ],
-      "metadata": {
-        "id": "qd8RIhWfy-zE"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Making the decision binary tree recursively by using the bestSplit function to make branches"
-      ],
       "metadata": {
         "id": "KbpW1YCS1m4o"
-      }
+      },
+      "source": [
+        "## Making the decision binary tree recursively by using the bestSplit function to make branches"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "DYVusq6Y2Kb4"
+      },
+      "outputs": [],
       "source": [
         "class Node:\n",
         "  def __init__(self, feature_index=None, threshold=None, left=None, right=None, value=None):\n",
@@ -174,24 +165,24 @@
         "      left=leftNode,\n",
         "      right=rightNode\n",
         "  )"
-      ],
-      "metadata": {
-        "id": "DYVusq6Y2Kb4"
-      },
-      "execution_count": 38,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## We implement prediction function by traversing the tree recursively to predict the Label of a input record"
-      ],
       "metadata": {
         "id": "pKOmvHgd-_xs"
-      }
+      },
+      "source": [
+        "## We implement prediction function by traversing the tree recursively to predict the Label of a input record"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "ytwauypF_jMZ"
+      },
+      "outputs": [],
       "source": [
         "def predict(node, record):\n",
         "  if node.value is not None: # Node is a leaf node\n",
@@ -200,28 +191,63 @@
         "    return predict(node.left, record)\n",
         "  else:\n",
         "    return predict(node.right, record)"
-      ],
-      "metadata": {
-        "id": "ytwauypF_jMZ"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Evaluate the decision tree model with the training and test datasets"
-      ],
       "metadata": {
         "id": "X5fKO8OMAGGd"
-      }
+      },
+      "source": [
+        "## Evaluate the decision tree model with the training and test datasets"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KBVnP_jRAiTq",
+        "outputId": "3fc5e2fa-30ea-4399-de69-73a2047fe939"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Prediction for :  [12.0, 1.5, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [5.0, 2.0, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [40.0, 0.0, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [13.5, 1.2, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [4.5, 1.8, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [38.0, 0.1, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [11.5, 1.7, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [5.5, 2.3, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Error Percentage :  0.0 %\n",
+            "Prediction for :  [6.0, 2.1, 0]  is :  Wine\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [39.0, 0.05, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [13.0, 1.3, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Error Percentage :  12.5 %\n"
+          ]
+        }
+      ],
       "source": [
         "# We build the model using the functions\n",
         "\n",
-        "decisionTree = buildTree(featureMatrix=features, labelArray=labels)\n",
+        "decisionTree = buildTree(featureMatrix=X, labelArray=y)\n",
         "\n",
         "# Evaluating on training set\n",
         "\n",
@@ -250,59 +276,42 @@
         "  print(\"Actual Label : \", answers[i])\n",
         "  error += (0 if inverseLabelMap[prediction] == answers[i] else 1)\n",
         "print(\"Error Percentage : \", error/len(data) * 100, \"%\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KBVnP_jRAiTq",
-        "outputId": "3fc5e2fa-30ea-4399-de69-73a2047fe939"
-      },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Prediction for :  [12.0, 1.5, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [5.0, 2.0, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [40.0, 0.0, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [13.5, 1.2, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [4.5, 1.8, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [38.0, 0.1, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [11.5, 1.7, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [5.5, 2.3, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Error Percentage :  0.0 %\n",
-            "Prediction for :  [6.0, 2.1, 0]  is :  Wine\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [39.0, 0.05, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [13.0, 1.3, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Error Percentage :  12.5 %\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Visualize the decision tree better for debigging purposes"
-      ],
       "metadata": {
         "id": "wE2_EJDXI0LI"
-      }
+      },
+      "source": [
+        "## Visualize the decision tree better for debigging purposes"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NB0-r621HxA3",
+        "outputId": "4edc0870-68c9-427a-ca95-ef354d63fc11"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "If feature[0] <= 5.5:\n",
+            "  Predict Beer\n",
+            "Else:\n",
+            "  If feature[0] <= 13.5:\n",
+            "    Predict Wine\n",
+            "  Else:\n",
+            "    Predict Whiskey\n"
+          ]
+        }
+      ],
       "source": [
         "def print_tree(node, spacing=\"\"):\n",
         "    if node.value is not None:\n",
@@ -315,42 +324,24 @@
         "    print_tree(node.right, spacing + \"  \")\n",
         "\n",
         "print_tree(decisionTree)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NB0-r621HxA3",
-        "outputId": "4edc0870-68c9-427a-ca95-ef354d63fc11"
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "If feature[0] <= 5.5:\n",
-            "  Predict Beer\n",
-            "Else:\n",
-            "  If feature[0] <= 13.5:\n",
-            "    Predict Wine\n",
-            "  Else:\n",
-            "    Predict Whiskey\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Optional : Use entropy criterion instead of gini"
-      ],
       "metadata": {
         "id": "A_8iXd2tJkBO"
-      }
+      },
+      "source": [
+        "## Optional : Use entropy criterion instead of gini"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "F9dRU1ucJpVM"
+      },
+      "outputs": [],
       "source": [
         "from math import log2\n",
         "def entropyImpurity(labels):\n",
@@ -361,24 +352,24 @@
         "  for i in labels:\n",
         "    counter[i] += 1\n",
         "  return -sum((count / total) * log2(count / total) for count in counter.values() if count > 0)"
-      ],
-      "metadata": {
-        "id": "F9dRU1ucJpVM"
-      },
-      "execution_count": 43,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## We rewrite the bestSplit function to take input for which impurity criteria to use"
-      ],
       "metadata": {
         "id": "TpF69erZMRwC"
-      }
+      },
+      "source": [
+        "## We rewrite the bestSplit function to take input for which impurity criteria to use"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {
+        "id": "9kqfHkinMXfT"
+      },
+      "outputs": [],
       "source": [
         "def bestSplit(featureMatrix, labelArray, criterion=\"gini\"):\n",
         "  minGINI = 1\n",
@@ -412,24 +403,24 @@
         "        bestFeature = feature\n",
         "\n",
         "  return bestFeature, bestThreshold"
-      ],
-      "metadata": {
-        "id": "9kqfHkinMXfT"
-      },
-      "execution_count": 44,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## We now use this to build our decision tree :"
-      ],
       "metadata": {
         "id": "sMNl_0o-NCKE"
-      }
+      },
+      "source": [
+        "## We now use this to build our decision tree :"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {
+        "id": "4C1MqhCyNGa2"
+      },
+      "outputs": [],
       "source": [
         "class Node:\n",
         "  def __init__(self, feature_index=None, threshold=None, left=None, right=None, value=None):\n",
@@ -471,24 +462,59 @@
         "      left=leftNode,\n",
         "      right=rightNode\n",
         "  )"
-      ],
-      "metadata": {
-        "id": "4C1MqhCyNGa2"
-      },
-      "execution_count": 46,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## We evaluate our model made on the entropy criterion"
-      ],
       "metadata": {
         "id": "hG3eMpGIOOay"
-      }
+      },
+      "source": [
+        "## We evaluate our model made on the entropy criterion"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cbnZEGY9PLPc",
+        "outputId": "87298831-c429-494e-ef2f-5b203148e9b9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Prediction for :  [12.0, 1.5, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [5.0, 2.0, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [40.0, 0.0, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [13.5, 1.2, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [4.5, 1.8, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [38.0, 0.1, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [11.5, 1.7, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Prediction for :  [5.5, 2.3, 0]  is :  Beer\n",
+            "Actual Label :  Beer\n",
+            "Error Percentage :  0.0 %\n",
+            "Prediction for :  [6.0, 2.1, 0]  is :  Wine\n",
+            "Actual Label :  Beer\n",
+            "Prediction for :  [39.0, 0.05, 1]  is :  Whiskey\n",
+            "Actual Label :  Whiskey\n",
+            "Prediction for :  [13.0, 1.3, 1]  is :  Wine\n",
+            "Actual Label :  Wine\n",
+            "Error Percentage :  33.33333333333333 %\n"
+          ]
+        }
+      ],
       "source": [
         "from types import CoroutineType\n",
         "# We build the model using the functions\n",
@@ -522,59 +548,42 @@
         "  print(\"Actual Label : \", answers[i])\n",
         "  error += (0 if inverseLabelMap[prediction] == answers[i] else 1)\n",
         "print(\"Error Percentage : \", error/len(test_data) * 100, \"%\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cbnZEGY9PLPc",
-        "outputId": "87298831-c429-494e-ef2f-5b203148e9b9"
-      },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Prediction for :  [12.0, 1.5, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [5.0, 2.0, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [40.0, 0.0, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [13.5, 1.2, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [4.5, 1.8, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [38.0, 0.1, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [11.5, 1.7, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Prediction for :  [5.5, 2.3, 0]  is :  Beer\n",
-            "Actual Label :  Beer\n",
-            "Error Percentage :  0.0 %\n",
-            "Prediction for :  [6.0, 2.1, 0]  is :  Wine\n",
-            "Actual Label :  Beer\n",
-            "Prediction for :  [39.0, 0.05, 1]  is :  Whiskey\n",
-            "Actual Label :  Whiskey\n",
-            "Prediction for :  [13.0, 1.3, 1]  is :  Wine\n",
-            "Actual Label :  Wine\n",
-            "Error Percentage :  33.33333333333333 %\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Printing the tree to visualize\n"
-      ],
       "metadata": {
         "id": "s5GQLwxIRSam"
-      }
+      },
+      "source": [
+        "## Printing the tree to visualize\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dvQsuSjNRVK8",
+        "outputId": "b12276c5-6005-4930-b6ad-a796e9e1226e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "If feature[0] <= 5.5:\n",
+            "  Predict Beer\n",
+            "Else:\n",
+            "  If feature[0] <= 13.5:\n",
+            "    Predict Wine\n",
+            "  Else:\n",
+            "    Predict Whiskey\n"
+          ]
+        }
+      ],
       "source": [
         "def print_tree(node, spacing=\"\"):\n",
         "    if node.value is not None:\n",
@@ -587,30 +596,21 @@
         "    print_tree(node.right, spacing + \"  \")\n",
         "\n",
         "print_tree(decisionTree)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dvQsuSjNRVK8",
-        "outputId": "b12276c5-6005-4930-b6ad-a796e9e1226e"
-      },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "If feature[0] <= 5.5:\n",
-            "  Predict Beer\n",
-            "Else:\n",
-            "  If feature[0] <= 13.5:\n",
-            "    Predict Wine\n",
-            "  Else:\n",
-            "    Predict Whiskey\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
