added knn as well

--- a/Session2/SupervisedLearning(TASK_1).ipynb
+++ b/Session2/SupervisedLearning(TASK_1).ipynb
@@ -19,6 +19,7 @@
       "source": [
         "import numpy as np\n",
         "\n",
+        "# Dataset: alcohol %, sugar content, color (0=light, 1=dark), and drink type\n",
         "data = [\n",
         "    [12.0, 1.5, 1, 'Wine'],\n",
         "    [5.0, 2.0, 0, 'Beer'],\n",
@@ -34,7 +35,10 @@
         "inverseLabelMap = {labelMap[key]: key for key in labelMap}\n",
         "\n",
         "y = np.array([labelMap[row[-1]] for row in data])\n",
-        "X = np.array([row[:-1] for row in data], dtype=float)"
+        "X = np.array([row[:-1] for row in data], dtype=float)\n",
+        "\n",
+        "# Converting string labels into numerical values\n",
+        "# X holds features, y holds encoded drink type labels"
       ]
     },
     {
@@ -48,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "noOMUbHCmsSX"
       },
@@ -58,7 +62,10 @@
         "  counter = {key: 0 for key in list(set(labels))}\n",
         "  for i in labels:\n",
         "    counter[i] += 1\n",
-        "  return 1 - sum(((count / len(labels)) ** 2) for count in counter.values())"
+        "  return 1 - sum(((count / len(labels)) ** 2) for count in counter.values())\n",
+        "\n",
+        "# Gini impurity measures how mixed a set of classes is\n",
+        "# Lower Gini → better (purer) split"
       ]
     },
     {
@@ -72,13 +79,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "qd8RIhWfy-zE"
       },
       "outputs": [],
       "source": [
-        "def bestSplit(featureMatrix, labelArray):\n",
+        "def bestSplit(featureMatrix, labelArray): # Finds the best feature and threshold to split on by minimizing Gini impurity\n",
         "  minGINI = 1\n",
         "  bestThreshold = None\n",
         "  bestFeature = None\n",
@@ -119,12 +126,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "DYVusq6Y2Kb4"
       },
       "outputs": [],
       "source": [
+        "# A Node stores either a decision (feature+threshold) or a prediction (value)\n",
         "class Node:\n",
         "  def __init__(self, feature_index=None, threshold=None, left=None, right=None, value=None):\n",
         "    self.feature_index = feature_index\n",
@@ -164,7 +172,10 @@
         "      threshold=bestThreshold,\n",
         "      left=leftNode,\n",
         "      right=rightNode\n",
-        "  )"
+        "  )\n",
+        "\n",
+        "# Recursively builds the decision tree\n",
+        "# Stops when depth limit is hit or data is pure"
       ]
     },
     {
